--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,9 @@ li {
 
 footer {
     background: black;
+    font-size: x-small ;
     margin: 20px;
-    padding: 10px 20px;
+    padding: 20px 20px;
+    color: gray;
+    text-align: center;
 }
